# ModularCirc

./: # .pre-commit-config.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  pyptoject.toml  requirements.txt  setup.py  test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb  test_circmodels_1.py  test_circmodels_2.py
.github/workflows/: ci.yml  publish.yml
Emulation/: Build_emulator_giessen_synthetic.ipynb  Create_data_batchrunner.ipynb  Create_data_posterior_samples.ipynb  Exporting_tables_for_manuscript.ipynb  bayesian_calibration.py  bayesian_calibration_test.py  investigating_datatypes.ipynb  parameters_pat.json
ModularCirc/: Component.py  HelperRoutines.py  Solver.py  StateVariable.py  Time.py  _BatchRunner.py  circmodels.py  pyvenv.cfg  timeclass.py
ModularCirc/Analysis/: BaseAnalysis.py  BaseAnlysis.py
ModularCirc/Components/: ComponentBase.py  HC_constant_elastance.py  HC_mixed_elastance.py  R_component.py  Rc_component.py  Rlc_component.py  Valve_maynard.py  Valve_non_ideal.py  Valve_simple_bernoulli.py  __init__.py
ModularCirc/Models/: KPat5MixedModel.py  KorakianitisMaynardModel.py  KorakianitisMixedMaynardModel.py  KorakianitisMixedModel.py  KorakianitisMixedModel_parameters.py  KorakianitisModel.py  KorakianitisModel_parameters.py  KorakianitisPlusModel.py  Korakianitis_2006.py  Korakianitis_parameters_2006.py  OdeModel.py  (+9 more)
Sensitivity_Analysis/: PlotSA.py  sensitivity_analysis_simulator.ipynb  sensitivity_right_heart_multiple_datatypes.ipynb
Tutorials/: README.md  circ_utils.py  creating_the_dataset.ipynb  parameters.json  requirements.txt  step1_creating_the_dataset.ipynb  step2_pca_and_cross_validation.ipynb  step3_sensitivity_analysis_and_emulation.ipynb
playground_scripts/: KorakianitisModel.ipynb
sandbox/: generate_KMM_KNO.ipynb
tests/: test_KorakianitisMixedModel.py  test_NaghaviModel.py  test_NaghaviModel_old.py  test_Solver.py
(+2077 files in other folders)
