[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ModularCirc"
version = "0.1.1"
description = "A python package for creating and running 0D models of the cardiovascular system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT" }
authors = [
    {name = "Maximilian Balmus", email = "mbalmus@turing.ac.uk"}
]

dependencies = [
    "matplotlib==3.8.2",
    "numba==0.59.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scipy==1.12.0",
    "joblib==1.4.2",
    "pandera==0.22.1",
    "tdqm==0.0.1"
]

[project.optional-dependencies]
notebooks = ["ipykernel"]

[project.urls]
"Homepage" = "https://github.com/alan-turing-institute/ModularCirc"
"Source Code" = "https://github.com/alan-turing-institute/ModularCirc"
"Bug Tracker" = "https://github.com/alan-turing-institute/ModularCirc/issues"

[tool.setuptools]
packages = ["ModularCirc"]