[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ModularCirc"
version = "0.1.1"
description = "A python package for creating and running 0D models of the cardiovascular system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT" }
authors = [
    {name = "Maximilian Balmus", email = "mbalmus@turing.ac.uk"}
]

dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "scipy",
    "joblib",
    "pandera",
    "tdqm"
]

[project.optional-dependencies]
notebooks = ["ipykernel"]
dev = ["pre-commit"]

[project.urls]
"Homepage" = "https://github.com/alan-turing-institute/ModularCirc"
"Source Code" = "https://github.com/alan-turing-institute/ModularCirc"
"Bug Tracker" = "https://github.com/alan-turing-institute/ModularCirc/issues"

[tool.setuptools]
packages = ["ModularCirc"]
